# sigillum

./: .gitignore  Makefile  README.md  contributing.md  pyproject.toml
.github/workflows/: release.yml
completion/bash/: sigillum
completion/zsh/: _sigillum
debian/: README.source  changelog  control  copyright  gbp.conf  rules  sigillum.1  sigillum.install  sigillum.manpages  watch
debian/source/: options
debian/upstream/: metadata
docs/: Makefile  sigillum.1
docs/po4a/: it.po  po4a.cfg  sigillum.pot
packaging/: README.md
packaging/fedora/: README.md  changelog  python-endesive.spec  sigillum.spec
packaging/flatpak/: io.github.piuma.sigillum.desktop  io.github.piuma.sigillum.metainfo.xml  io.github.piuma.sigillum.yml  io.github.sigillum.desktop  io.github.sigillum.metainfo.xml  io.github.sigillum.yml  python3-deps.yaml
packaging/python3-endesive/: README.md
packaging/python3-endesive/debian/: changelog  control  copyright  rules  watch
po/: Makefile  POTFILES.in  it.po  sigillum.pot
scripts/: build_flatpak.sh
src/sigillum/: __init__.py  __main__.py  cli.py  i18n.py
src/sigillum/core/: __init__.py  credentials.py  crypto.py  detection.py  lt.py  pades_lt.py  settings.py  signer.py  timestamp.py  tsa.py  tsl.py  verifier.py  xades_lt.py
src/sigillum/core/csc/: __init__.py  client.py
src/sigillum/gui/: __init__.py  app.py  signature_picker.py
tests/: conftest.py  fixtures.py  test_cades_roundtrip.py  test_crypto.py  test_detection.py  test_lt.py  test_pades_lt.py  test_pades_roundtrip.py  test_pades_sign.py  test_pades_visible.py  test_pkcs11_yubikey.py  test_settings.py  test_timestamp.py  test_tsa_live.py  test_tsl.py  test_xades_lt.py  test_xades_roundtrip.py
tests/csc/: test_client.py  test_client_live.py  test_client_skeleton.py  test_provider.py
