[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigillum"
version = "0.1.0"
description = "Firma digitale PAdES/CAdES/XAdES con token hardware e certificati su file"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Danilo Abbasciano" }]
dependencies = [
    "endesive>=2.17.0",
    "PyKCS11>=1.5.15",
    "cryptography>=42.0",
    "asn1crypto>=1.5",
    "PyGObject>=3.46",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
sigillum = "sigillum.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sigillum"]

[tool.hatch.build.targets.sdist]
# Ship the gettext source files (.pot / .po) so distros can compile .mo at
# build time. Test files are useful for running pytest from an sdist.
include = [
    "src/sigillum",
    "po/*.po",
    "po/*.pot",
    "po/Makefile",
    "po/POTFILES.in",
    "po/LINGUAS",
    "docs/sigillum.1",
    "docs/Makefile",
    "docs/po4a/po4a.cfg",
    "docs/po4a/*.pot",
    "docs/po4a/*.po",
    "tests/*.py",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
markers = [
    "network: il test richiede accesso a internet (TSA, AgID TSL)",
    "hardware: il test richiede un dispositivo hardware (YubiKey, smartcard)",
]
# In ambienti di build (Debian buildd, CI offline) escludere con:
#   pytest -m "not network and not hardware"
