[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigillum"
version = "0.2.1"
description = "PAdES/CAdES/XAdES digital signing with hardware tokens and file certificates"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Danilo Abbasciano", email = "danilo@piumalab.org" }]
keywords = ["digital-signature", "pades", "cades", "xades", "pkcs11", "pdf", "esignature"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Office/Business",
]

dependencies = [
    "endesive>=2.17.0",
    "PyKCS11>=1.5.15",
    "cryptography>=42.0",
    "asn1crypto>=1.5",
    "PyGObject>=3.46",
    "requests>=2.31",
    "lxml>=4.9",
]

[project.urls]
Homepage = "https://github.com/piuma/sigillum"
"Bug Tracker" = "https://github.com/piuma/sigillum/issues"
Changelog = "https://github.com/piuma/sigillum/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "shtab>=1.6",  # used to regenerate completion/bash + completion/zsh
]

[project.scripts]
sigillum = "sigillum.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sigillum"]

[tool.hatch.build.targets.sdist]
# Ship the gettext source files (.pot / .po) so distros can compile .mo at
# build time. Test files are useful for running pytest from an sdist.
include = [
    "src/sigillum",
    "po/*.po",
    "po/*.pot",
    "po/Makefile",
    "po/POTFILES.in",
    "po/LINGUAS",
    "docs/sigillum.1",
    "docs/Makefile",
    "docs/po4a/po4a.cfg",
    "docs/po4a/*.pot",
    "docs/po4a/*.po",
    "completion/bash/sigillum",
    "completion/zsh/_sigillum",
    "tests/*.py",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
markers = [
    "network: il test richiede accesso a internet (TSA, AgID TSL)",
    "hardware: il test richiede un dispositivo hardware (YubiKey, smartcard)",
]
# In ambienti di build (Debian buildd, CI offline) escludere con:
#   pytest -m "not network and not hardware"
